--- a/darts-framework/darts_commodities.ipynb
+++ b/darts-framework/darts_commodities.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -105,49 +105,49 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2011-01-31</th>\n",
-       "      <td>303.212001</td>\n",
-       "      <td>306.271999</td>\n",
-       "      <td>300.275996</td>\n",
-       "      <td>303.656000</td>\n",
-       "      <td>303.656000</td>\n",
-       "      <td>1.367768e+06</td>\n",
+       "      <th>2011-01-09</th>\n",
+       "      <td>307.808002</td>\n",
+       "      <td>309.823999</td>\n",
+       "      <td>302.240002</td>\n",
+       "      <td>305.600000</td>\n",
+       "      <td>305.600000</td>\n",
+       "      <td>1274647.80</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2011-02-28</th>\n",
-       "      <td>300.256841</td>\n",
-       "      <td>303.077895</td>\n",
-       "      <td>296.109471</td>\n",
-       "      <td>298.703159</td>\n",
-       "      <td>298.703159</td>\n",
-       "      <td>2.357657e+06</td>\n",
+       "      <th>2011-01-16</th>\n",
+       "      <td>308.879999</td>\n",
+       "      <td>311.279999</td>\n",
+       "      <td>307.087994</td>\n",
+       "      <td>309.776001</td>\n",
+       "      <td>309.776001</td>\n",
+       "      <td>872017.60</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2011-03-31</th>\n",
-       "      <td>330.215652</td>\n",
-       "      <td>333.819132</td>\n",
-       "      <td>327.680002</td>\n",
-       "      <td>331.391304</td>\n",
-       "      <td>331.391304</td>\n",
-       "      <td>2.348351e+06</td>\n",
+       "      <th>2011-01-23</th>\n",
+       "      <td>305.620003</td>\n",
+       "      <td>307.160004</td>\n",
+       "      <td>303.099991</td>\n",
+       "      <td>304.699997</td>\n",
+       "      <td>304.699997</td>\n",
+       "      <td>1065418.75</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2011-04-30</th>\n",
-       "      <td>349.512000</td>\n",
-       "      <td>352.811998</td>\n",
-       "      <td>346.643999</td>\n",
-       "      <td>350.539999</td>\n",
-       "      <td>350.539999</td>\n",
-       "      <td>1.350908e+06</td>\n",
+       "      <th>2011-01-30</th>\n",
+       "      <td>292.016003</td>\n",
+       "      <td>295.839996</td>\n",
+       "      <td>289.695996</td>\n",
+       "      <td>293.712000</td>\n",
+       "      <td>293.712000</td>\n",
+       "      <td>1787647.80</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2011-05-31</th>\n",
-       "      <td>321.961904</td>\n",
-       "      <td>326.137142</td>\n",
-       "      <td>316.464761</td>\n",
-       "      <td>321.169521</td>\n",
-       "      <td>321.169521</td>\n",
-       "      <td>2.551466e+06</td>\n",
+       "      <th>2011-02-06</th>\n",
+       "      <td>305.151996</td>\n",
+       "      <td>309.183997</td>\n",
+       "      <td>300.912000</td>\n",
+       "      <td>304.464001</td>\n",
+       "      <td>304.464001</td>\n",
+       "      <td>2026185.40</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -156,22 +156,22 @@
       "text/plain": [
        "                  Open        High         Low       Close   Adj Close  \\\n",
        "Date                                                                     \n",
-       "2011-01-31  303.212001  306.271999  300.275996  303.656000  303.656000   \n",
-       "2011-02-28  300.256841  303.077895  296.109471  298.703159  298.703159   \n",
-       "2011-03-31  330.215652  333.819132  327.680002  331.391304  331.391304   \n",
-       "2011-04-30  349.512000  352.811998  346.643999  350.539999  350.539999   \n",
-       "2011-05-31  321.961904  326.137142  316.464761  321.169521  321.169521   \n",
+       "2011-01-09  307.808002  309.823999  302.240002  305.600000  305.600000   \n",
+       "2011-01-16  308.879999  311.279999  307.087994  309.776001  309.776001   \n",
+       "2011-01-23  305.620003  307.160004  303.099991  304.699997  304.699997   \n",
+       "2011-01-30  292.016003  295.839996  289.695996  293.712000  293.712000   \n",
+       "2011-02-06  305.151996  309.183997  300.912000  304.464001  304.464001   \n",
        "\n",
-       "                  Volume  \n",
-       "Date                      \n",
-       "2011-01-31  1.367768e+06  \n",
-       "2011-02-28  2.357657e+06  \n",
-       "2011-03-31  2.348351e+06  \n",
-       "2011-04-30  1.350908e+06  \n",
-       "2011-05-31  2.551466e+06  "
+       "                Volume  \n",
+       "Date                    \n",
+       "2011-01-09  1274647.80  \n",
+       "2011-01-16   872017.60  \n",
+       "2011-01-23  1065418.75  \n",
+       "2011-01-30  1787647.80  \n",
+       "2011-02-06  2026185.40  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,29 +202,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "ValueError: Train series only contains 0 elements but ExponentialSmoothing() model requires at least 3 entries\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "Train series only contains 0 elements but ExponentialSmoothing() model requires at least 3 entries",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[23], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mdarts\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mmodels\u001b[39;00m \u001b[39mimport\u001b[39;00m ExponentialSmoothing\n\u001b[1;32m      3\u001b[0m model \u001b[39m=\u001b[39m ExponentialSmoothing()\n\u001b[0;32m----> 4\u001b[0m model\u001b[39m.\u001b[39;49mfit(train)\n\u001b[1;32m      5\u001b[0m prediction \u001b[39m=\u001b[39m model\u001b[39m.\u001b[39mpredict(\u001b[39mlen\u001b[39m(val), num_samples\u001b[39m=\u001b[39m\u001b[39m1000\u001b[39m)\n",
-      "File \u001b[0;32m~/miniconda3/envs/lightbox/lib/python3.11/site-packages/darts/models/forecasting/exponential_smoothing.py:81\u001b[0m, in \u001b[0;36mExponentialSmoothing.fit\u001b[0;34m(self, series)\u001b[0m\n\u001b[1;32m     80\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mfit\u001b[39m(\u001b[39mself\u001b[39m, series: TimeSeries):\n\u001b[0;32m---> 81\u001b[0m     \u001b[39msuper\u001b[39;49m()\u001b[39m.\u001b[39;49mfit(series)\n\u001b[1;32m     82\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_assert_univariate(series)\n\u001b[1;32m     83\u001b[0m     series \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtraining_series\n",
-      "File \u001b[0;32m~/miniconda3/envs/lightbox/lib/python3.11/site-packages/darts/models/forecasting/forecasting_model.py:1941\u001b[0m, in \u001b[0;36mLocalForecastingModel.fit\u001b[0;34m(self, series)\u001b[0m\n\u001b[1;32m   1939\u001b[0m \u001b[39m@abstractmethod\u001b[39m\n\u001b[1;32m   1940\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mfit\u001b[39m(\u001b[39mself\u001b[39m, series: TimeSeries) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mLocalForecastingModel\u001b[39m\u001b[39m\"\u001b[39m:\n\u001b[0;32m-> 1941\u001b[0m     \u001b[39msuper\u001b[39;49m()\u001b[39m.\u001b[39;49mfit(series)\n\u001b[1;32m   1942\u001b[0m     series\u001b[39m.\u001b[39m_assert_deterministic()\n",
-      "File \u001b[0;32m~/miniconda3/envs/lightbox/lib/python3.11/site-packages/darts/models/forecasting/forecasting_model.py:157\u001b[0m, in \u001b[0;36mForecastingModel.fit\u001b[0;34m(self, series)\u001b[0m\n\u001b[1;32m    143\u001b[0m \u001b[39m@abstractmethod\u001b[39m\n\u001b[1;32m    144\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mfit\u001b[39m(\u001b[39mself\u001b[39m, series: TimeSeries) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mForecastingModel\u001b[39m\u001b[39m\"\u001b[39m:\n\u001b[1;32m    145\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"Fit/train the model on the provided series.\u001b[39;00m\n\u001b[1;32m    146\u001b[0m \n\u001b[1;32m    147\u001b[0m \u001b[39m    Parameters\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    155\u001b[0m \u001b[39m        Fitted model.\u001b[39;00m\n\u001b[1;32m    156\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 157\u001b[0m     raise_if_not(\n\u001b[1;32m    158\u001b[0m         \u001b[39mlen\u001b[39;49m(series) \u001b[39m>\u001b[39;49m\u001b[39m=\u001b[39;49m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mmin_train_series_length,\n\u001b[1;32m    159\u001b[0m         \u001b[39m\"\u001b[39;49m\u001b[39mTrain series only contains \u001b[39;49m\u001b[39m{}\u001b[39;49;00m\u001b[39m elements but \u001b[39;49m\u001b[39m{}\u001b[39;49;00m\u001b[39m model requires at least \u001b[39;49m\u001b[39m{}\u001b[39;49;00m\u001b[39m entries\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39m.\u001b[39;49mformat(\n\u001b[1;32m    160\u001b[0m             \u001b[39mlen\u001b[39;49m(series), \u001b[39mstr\u001b[39;49m(\u001b[39mself\u001b[39;49m), \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mmin_train_series_length\n\u001b[1;32m    161\u001b[0m         ),\n\u001b[1;32m    162\u001b[0m     )\n\u001b[1;32m    163\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtraining_series \u001b[39m=\u001b[39m series\n\u001b[1;32m    164\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_fit_called \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m\n",
-      "File \u001b[0;32m~/miniconda3/envs/lightbox/lib/python3.11/site-packages/darts/logging.py:78\u001b[0m, in \u001b[0;36mraise_if_not\u001b[0;34m(condition, message, logger)\u001b[0m\n\u001b[1;32m     76\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m condition:\n\u001b[1;32m     77\u001b[0m     logger\u001b[39m.\u001b[39merror(\u001b[39m\"\u001b[39m\u001b[39mValueError: \u001b[39m\u001b[39m\"\u001b[39m \u001b[39m+\u001b[39m message)\n\u001b[0;32m---> 78\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(message)\n",
-      "\u001b[0;31mValueError\u001b[0m: Train series only contains 0 elements but ExponentialSmoothing() model requires at least 3 entries"
+      "The `LightGBM` module could not be imported. To enable LightGBM support in Darts, follow the detailed instructions in the installation guide: https://github.com/unit8co/darts/blob/master/INSTALL.md\n",
+      "The `Prophet` module could not be imported. To enable Prophet support in Darts, follow the detailed instructions in the installation guide: https://github.com/unit8co/darts/blob/master/INSTALL.md\n",
+      "The `CatBoost` module could not be imported. To enable CatBoost support in Darts, follow the detailed instructions in the installation guide: https://github.com/unit8co/darts/blob/master/INSTALL.md\n"
      ]
     }
    ],
@@ -238,16 +225,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x2990ade50>"
+       "<matplotlib.legend.Legend at 0x289ee1010>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
