--- a/notebooks/bayes-lstm-commodity.ipynb
+++ b/notebooks/bayes-lstm-commodity.ipynb
@@ -107,8 +107,7 @@
     "# name = 'PA=F' #paladium\n",
     "# name = 'CL=F' #crude oil\n",
     "# name = 'BZ=F' #brent crude oil\n",
-    "# name = 'NG=F' #natural gas\n",
-    "name = 'NVDA'\n",
+    "name = 'NG=F' #natural gas\n",
     "\n",
     "train_end_date = '2023-07-01'\n",
     "\n",
