--- a/notebooks/transfer-learn-lstm-basket10.ipynb
+++ b/notebooks/transfer-learn-lstm-basket10.ipynb
@@ -895,39 +895,46 @@
     }
    ],
    "source": [
-    "models = {\n",
-    "    \"Close Column\": preds_1,\n",
-    "    \"2 Columns\": preds_2,\n",
-    "    \"5 Columns\": preds_5,\n",
-    "    \"7 Columns\": preds_7,\n",
-    "    \"All Columns\": preds_max\n",
-    "}\n",
+    "# models = {\n",
+    "#     \"Close Column\": preds_1,\n",
+    "#     \"2 Columns\": preds_2,\n",
+    "#     \"5 Columns\": preds_5,\n",
+    "#     \"7 Columns\": preds_7,\n",
+    "#     \"All Columns\": preds_max\n",
+    "# }\n",
     "\n",
-    "metrics = [\"MAPE\", \"RMSE\", \"MAE\", \"FB\", \"R2\"]\n",
+    "# metrics = [\"MAPE\", \"RMSE\", \"MAE\", \"FB\", \"R2\"]\n",
     "\n",
     "\n",
-    "print(\"{:<15}\".format(\"Model\"), end=\"\")\n",
-    "for metric in metrics:\n",
-    "    print(\"{:<10}\".format(metric), end=\"\")\n",
-    "print()\n",
+    "# print(\"{:<15}\".format(\"Model\"), end=\"\")\n",
+    "# for metric in metrics:\n",
+    "#     print(\"{:<10}\".format(metric), end=\"\")\n",
+    "# print()\n",
     "\n",
-    "for model_name, predictions in models.items():\n",
-    "    print(\"{:<15}\".format(model_name), end=\"\")\n",
-    "    for metric in metrics:\n",
-    "        metric_value = None\n",
-    "        if metric == \"MAPE\":\n",
-    "            metric_value = calculate_mape(predictions, truths)\n",
-    "        elif metric == \"RMSE\":\n",
-    "            metric_value = calculate_rmse(predictions, truths)\n",
-    "        elif metric == \"MAE\":\n",
-    "            metric_value = calculate_mae(predictions, truths)\n",
-    "        elif metric == \"FB\":\n",
-    "            metric_value = calculate_forecast_bias(predictions, truths)\n",
-    "        elif metric == \"R2\":\n",
-    "            metric_value = calculate_r2(predictions, truths)\n",
-    "        print(\"{:<10.2f}\".format(metric_value), end=\"\")\n",
-    "    print()"
+    "# for model_name, predictions in models.items():\n",
+    "#     print(\"{:<15}\".format(model_name), end=\"\")\n",
+    "#     for metric in metrics:\n",
+    "#         metric_value = None\n",
+    "#         if metric == \"MAPE\":\n",
+    "#             metric_value = calculate_mape(predictions, truths)\n",
+    "#         elif metric == \"RMSE\":\n",
+    "#             metric_value = calculate_rmse(predictions, truths)\n",
+    "#         elif metric == \"MAE\":\n",
+    "#             metric_value = calculate_mae(predictions, truths)\n",
+    "#         elif metric == \"FB\":\n",
+    "#             metric_value = calculate_forecast_bias(predictions, truths)\n",
+    "#         elif metric == \"R2\":\n",
+    "#             metric_value = calculate_r2(predictions, truths)\n",
+    "#         print(\"{:<10.2f}\".format(metric_value), end=\"\")\n",
+    "#     print()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
