--- a/notebooks/naive-bayes-nn.ipynb
+++ b/notebooks/naive-bayes-nn.ipynb
@@ -27,8 +27,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# spy_ohlc_df = yf.download('SPY', start='1999-02-01', end='2019-12-01')\n",
-    "# spy_ohlc_df = yf.download('SPY', start='2019-01-01', end='2023-12-01')\n",
     "spy_ohlc_df = yf.download('MSFT', start='2019-01-01', end='2023-12-01')\n",
     "df = spy_ohlc_df"
    ]
@@ -257,8 +255,6 @@
    "outputs": [],
    "source": [
     "def mse_penalty_term(y_true, y_pred):\n",
-    "    # penalty = 1e-5\n",
-    "    # loss = tf.where(tf.less(y_true * y_pred, 0), penalty * abs(y_pred) * tf.square(y_true - y_pred), tf.square(y_true - y_pred))\n",
     "    penalty = 10.5\n",
     "    loss = tf.where(tf.less(y_true * y_pred, 0), penalty * tf.square(y_true - y_pred), tf.square(y_true - y_pred))\n",
     "    return tf.reduce_mean(loss, axis=-1)\n",
@@ -419,28 +415,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# plt.figure(figsize=(3,2))\n",
-    "# plt.hist2d(test_labels, test_predictions1, bins=20, cmap='Blues')\n",
-    "# plt.axhline(y=0,ls='--',color='red')\n",
-    "# plt.axvline(x=0,ls='--',color='red')\n",
-    "# plt.xlabel('Truth')\n",
-    "# plt.ylabel('Predictions')\n",
-    "# plt.title('Test Predictions')\n",
-    "# plt.colorbar()\n",
-    "# plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_predictions1 = model.predict(normed_test_data).flatten()\n",
-    "# print(test_predictions1[:15])\n",
-    "# print(test_labels[:15])\n",
-    "# normed_test_data['yhat'] = test_predictions1\n",
-    "# normed_test_data.head()"
+    "test_predictions1 = model.predict(normed_test_data).flatten()"
    ]
   },
   {
@@ -535,13 +510,7 @@
     "fig, ax = plt.subplots(figsize=(12,5))\n",
     "batch = 16\n",
     "n_preds = 3\n",
-    "# print(df['5d_future_close_pct'].values[n_preds*batch:n_preds*(batch+1)])\n",
-    "# print('trut',test_labels.values[n_preds*batch:n_preds*(batch+1)])\n",
-    "# print('pred',test_predictions1[n_preds*batch:n_preds*(batch+1)])\n",
-    "# print('pmea',[np.mean(x) for x in yhats[n_preds*batch:n_preds*(batch+1)]])\n",
     "ax.scatter(normed_test_data.index.values[n_preds*batch:n_preds*(batch+1)], test_labels.values[n_preds*batch:n_preds*(batch+1)],color='green',label='Truth')\n",
-    "# ax.scatter(normed_test_data.index.values[n_preds*batch:n_preds*(batch+1)], test_predictions1[n_preds*batch:n_preds*(batch+1)],marker='x',color='red',label='Model1')\n",
-    "# violin = ax.violinplot(yhats[5*batch:5*(batch+1)],positions=df.index.values[5*batch:5*(batch+1)],showmeans=True)\n",
     "violin = ax.violinplot(yhats[n_preds*batch:n_preds*(batch+1)],positions=matplotlib.dates.date2num(normed_test_data.index)[n_preds*batch:n_preds*(batch+1)],showmeans=True,showmedians=True)\n",
     "for pc in violin[\"bodies\"]:\n",
     "    pc.set_facecolor(\"grey\")\n",
@@ -556,7 +525,6 @@
     "ax.set(xlabel='Date',ylabel='3d_future_close_pct')\n",
     "ax.grid(color=\"0.95\")\n",
     "legend_elements = [matplotlib.lines.Line2D([0], [0], marker='o', label='Truth',markerfacecolor='g', markersize=10,linestyle='None'),\n",
-    "                #    matplotlib.lines.Line2D([0], [0], marker='x', color='red', label='Model1', markersize=10,linestyle='None'),\n",
     "                   matplotlib.patches.Patch(facecolor='grey', edgecolor='k',label='Models dist.')]\n",
     "\n",
     "ax.legend(handles=legend_elements,loc='best')\n",
@@ -570,39 +538,14 @@
    "outputs": [],
    "source": [
     "print(normed_test_data.columns)\n",
-    "# print(normed_test_data.head())\n",
     "print(normed_test_data.index.values[:5])\n",
     "\n",
-    "# plt.violinplot(yhats[:5],positions=normed_test_data.index[:5],showmeans=True)\n",
     "plt.violinplot(yhats[:10],showmeans=True)\n",
     "plt.xlabel('Dataset')\n",
     "plt.ylabel('Value')\n",
     "plt.title('Basic Violin Plot')\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#https://www.tensorflow.org/probability/examples/STS_approximate_inference_for_models_with_non_Gaussian_observations"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -669,7 +612,6 @@
     "plt.xlabel('True Values')\n",
     "plt.ylabel('Predictions')\n",
     "plt.legend()\n",
-    "# plt.savefig('ann-scatter.png')\n",
     "plt.show()"
    ]
   },
@@ -683,7 +625,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "lightbox",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -697,10 +639,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
-  },
-  "orig_nbformat": 4
+   "version": "3.12.4"
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
