--- a/notebooks/bayes-lstm-commodity.ipynb
+++ b/notebooks/bayes-lstm-commodity.ipynb
@@ -66,10 +66,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# x1 = np.array(df.iloc[:,1]+np.random.randn(df.shape[0])).astype(np.float32).reshape(-1,1)\n",
     "train_size = int(0.75 * len(df))\n",
     "\n",
-    "# x1 = np.array(df.iloc[:train_size,1]).astype(np.float32).reshape(-1,1)\n",
     "sequence_length = 10\n",
     "train_input = np.lib.stride_tricks.sliding_window_view(df.iloc[:train_size,1].values, sequence_length)\n",
     "val_input = np.lib.stride_tricks.sliding_window_view(df.iloc[train_size:-1,1].values, sequence_length)\n",
@@ -86,11 +84,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# print(train_input[:2])\n",
-    "# print()\n",
-    "# print(y1[:2])\n",
-    "# print(train_input.shape,y1.shape)\n",
-    "\n",
     "print(val_input[:2])\n",
     "print()\n",
     "print(y2[:2])\n",
@@ -201,7 +194,6 @@
     "plt.legend()\n",
     "plt.grid(True)\n",
     "plt.tight_layout()\n",
-    "# plt.xlim((val_dates[50][0],val_dates[350][0]))\n",
     "plt.show()"
    ]
   },
@@ -239,7 +231,7 @@
     "plt.legend(loc='best')\n",
     "plt.grid(True)\n",
     "plt.tight_layout()\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -300,11 +292,6 @@
     "pred_pct_changes = ((m - y2) / y2) * 100 \n",
     "pred_pct_changes2 = (np.diff(m) / m[:-1]) * 100\n",
     "\n",
-    "# y3 = y3.reshape(-1)\n",
-    "# true_pct_changes = (np.diff(y3) / y3[:-1]) * 100\n",
-    "# pred_pct_changes = ((m_test - y3) / y3) * 100 \n",
-    "\n",
-    "\n",
     "print(true_pct_changes.shape)\n",
     "print(pred_pct_changes.shape)\n",
     "plt.figure()\n",
@@ -327,7 +314,6 @@
    "source": [
     "plt.figure(figsize=(6, 4.5))\n",
     "plt.hist2d(true_pct_changes, pred_pct_changes[:-1], bins=25, cmap='jet',cmin=1)#,range=[[-2, 2], [-2, 2]]\n",
-    "# plt.hist2d(true_pct_changes, pred_pct_changes2, bins=25, cmap='jet',range=[[-2, 2], [-2, 2]],cmin=1)\n",
     "plt.colorbar(label='Counts')\n",
     "plt.xlabel('True values')\n",
     "plt.ylabel('Predictions')\n",
@@ -348,7 +334,6 @@
    "source": [
     "from sklearn.metrics import confusion_matrix\n",
     "conf_matrix = confusion_matrix(np.sign(true_pct_changes), np.sign(pred_pct_changes[:-1]), labels=[1, -1])\n",
-    "# conf_matrix = confusion_matrix(np.sign(true_pct_changes), np.sign(pred_pct_changes2), labels=[1, -1])\n",
     "print(\"Confusion Matrix:\")\n",
     "print(conf_matrix)"
    ]
@@ -359,7 +344,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "same_sign_indices = np.where(np.sign(true_pct_changes) == np.sign(pred_pct_changes[:-1]))\n",
     "diff_sign_indices = np.where(np.sign(true_pct_changes) != np.sign(pred_pct_changes[:-1]))\n",
     "\n",
@@ -520,18 +504,11 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "lightbox",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -545,10 +522,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
-  },
-  "orig_nbformat": 4
+   "version": "3.12.4"
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
